--- a/GuessThatImage/res/layout/fragment_splash_screen.xml
+++ b/GuessThatImage/res/layout/fragment_splash_screen.xml
@@ -15,5 +15,5 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:src="@drawable/ic_launcher" />
-
+		some random stuff
 </RelativeLayout>
