--- a/GuessThatImage/res/layout/activity_splash_screen.xml
+++ b/GuessThatImage/res/layout/activity_splash_screen.xml
@@ -14,4 +14,13 @@
         android:layout_centerVertical="true"
         android:src="@drawable/ic_launcher" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:text="@string/splash_title"
+        android:textSize="15.5sp" />
+
 </RelativeLayout>
