--- a/GuessThatImage/res/layout/activity_game.xml
+++ b/GuessThatImage/res/layout/activity_game.xml
@@ -23,4 +23,23 @@
         android:layout_marginRight="14dp"
         android:text="Button" />
 
+    <Button
+        android:id="@+id/start_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button1"
+        android:layout_alignLeft="@+id/button1"
+        android:layout_alignRight="@+id/button1"
+        android:layout_marginBottom="54dp"
+        android:text="Start!" />
+
+    <TextView
+        android:id="@+id/time_remaining"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/start_time"
+        android:layout_alignBottom="@+id/start_time"
+        android:layout_alignParentLeft="true"
+        android:text="Here is the time counter!" />
+
 </RelativeLayout>
