--- a/GuessThatImage/res/layout/activity_game.xml
+++ b/GuessThatImage/res/layout/activity_game.xml
@@ -42,4 +42,13 @@
         android:layout_alignParentLeft="true"
         android:text="Here is the time counter!" />
 
+    <TextView
+        android:id="@+id/current_score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/start_time"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="75dp"
+        android:text="0" />
+
 </RelativeLayout>
