--- a/GuessThatImage/res/layout/activity_game.xml
+++ b/GuessThatImage/res/layout/activity_game.xml
@@ -51,4 +51,38 @@
         android:layout_marginBottom="75dp"
         android:text="0" />
 
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="31dp"
+        android:layout_marginTop="24dp"
+        android:layout_toRightOf="@+id/current_score"
+        android:src="@drawable/ic_launcher" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/imageView1"
+        android:layout_toRightOf="@+id/editText1"
+        android:src="@drawable/ic_launcher" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/current_score"
+        android:layout_alignLeft="@+id/imageView1"
+        android:src="@drawable/ic_launcher" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/current_score"
+        android:layout_alignLeft="@+id/imageView2"
+        android:src="@drawable/ic_launcher" />
+
 </RelativeLayout>
