--- a/GuessThatImage/res/layout/activity_game.xml
+++ b/GuessThatImage/res/layout/activity_game.xml
@@ -21,7 +21,7 @@
         android:layout_alignBottom="@+id/editText1"
         android:layout_alignParentRight="true"
         android:layout_marginRight="14dp"
-        android:text="Button" />
+        android:text="Guess" />
 
     <Button
         android:id="@+id/start_time"
