--- a/GuessThatImage/res/layout/activity_leader_board.xml
+++ b/GuessThatImage/res/layout/activity_leader_board.xml
@@ -8,8 +8,8 @@
         android:id="@+id/leader_board"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" >
+        android:layout_centerHorizontal="false"
+        android:layout_centerVertical="false" >
     </ListView>
 
 </RelativeLayout>
