--- a/GuessThatImage/res/layout/activity_game.xml
+++ b/GuessThatImage/res/layout/activity_game.xml
@@ -28,6 +28,15 @@
                 android:layout_weight="0.5"
                 android:text="time" 
                 android:textColor="@android:color/white"/>
+            
+            <TextView
+                android:id="@+id/loading_tip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:text="start" 
+                android:gravity="center"
+                android:textColor="@android:color/white"/>
 
             <TextView
                 android:id="@+id/current_score"
@@ -37,6 +46,7 @@
                 android:gravity="right"
                 android:text="0"
                 android:textColor="@android:color/white" />
+            
 
         </TableRow>
 
@@ -119,6 +129,8 @@
                 android:text="Guess" />
 
         </TableLayout>
+
+
     </RelativeLayout>
 
 </RelativeLayout>
